@@ -1251,9 +1251,6 @@ pi ; ==> 3.141592653589793
 ;
 ; Read the file with the given filename and return it's contents
 ; as a `string`. Lineend character sequences will be normalized to `#\Newline`.
-; If a non-empty file ends with a line without a lineend character sequence
-; then one will be supplied. `result-string` will either be empty
-; or end with `#\Newline`.
 ;
 ; `charset` defaults to UTF-8.
 
